creating some tags into index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
 <body>
 
 
+  <div class="box">
+    <h1 class="box__title">Lorem ipsum dolor sit amet.</h1>
+
+    <ul class="box__items">
+      <li class="box__item">Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+      <li class="box__item">Libero dicta a explicabo enim corrupti odit ut.</li>
+      <li class="box__item">Numquam consequuntur dolores voluptatem labore natus laboriosam debitis.</li>
+      <li class="box__item">Perferendis architecto recusandae maiores adipisci, facere velit harum!</li>
+    </ul>
+
+
+    <p class="box__text">
+
+      <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt, odit praesentium! Dolores, iure! Possimus ex vero eos omnis soluta eius dolores temporibus. Accusamus, laboriosam? Harum blanditiis quod ab distinctio? Sit.
+      </span>
+
+      <span>Architecto quaerat quos, libero exercitationem repudiandae facere culpa sunt praesentium alias facilis aliquam autem obcaecati quae, fugit asperiores! Vitae soluta consequuntur cupiditate facere quia. Vel incidunt facilis quidem labore eos.
+      </span>
+      
+      <span>Sequi inventore eligendi, vitae doloremque porro iure. Tempore est animi ex ipsa quaerat, voluptas laudantium nostrum, rerum et eum beatae voluptatibus deleniti eligendi reprehenderit laboriosam consequatur sed sapiente quod minus.</span><span>Nesciunt cum quo, nobis aperiam sunt iusto similique repellat tempora in culpa perferendis consectetur suscipit eligendi magnam atque expedita asperiores illum numquam animi est inventore optio obcaecati et? Nam, quasi?
+      </span>
+
+      <span>Laborum voluptas porro sunt. Corporis quis debitis dolorum quas ut, tenetur, delectus at sint consequuntur magnam iste provident placeat saepe ad impedit pariatur dolore, quae quod magni numquam veritatis perferendis.
+      </span>
+    </p>
+  </div>
+
+
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/main.js"></script>
 </body>
