--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
   <div class="box">
-    <h1 class="box__title">Lorem ipsum dolor sit amet.</h1>
+    <h1 class="box__title">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</h1>
 
     <ul class="box__items">
       <li class="box__item">Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
