--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
   <div class="box">
-    <h1 class="box__title">Lorem ipsum dolor sit amet.</h1>
+    <h1 class="box__title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, doloribus ut facilis, provident magni ipsum dolore sapiente vero vel quam explicabo? Fuga asperiores repellat molestias accusantium, accusamus temporibus quis quibusdam!</h1>
 
     <ul class="box__items">
       <li class="box__item">Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
