added some styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <main class="todo__wrapper">
     <section class="todo__top">
-      <h1 class="todo__title">My To-Do list</h1>
+      <h1 class="todo__title">My To Do list</h1>
       <form class="todo__form">
         <input class="todo__form-add" id="form-add" type="text" name="form-add-area" placeholder="Title...">
         <button class="todo__form-btn" type="button">Add</button>
