--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
     <main class="todo__body">
       <ul class="todo__items" id="todoList">
         <li class="todo__item">
-          <div class="todo__checked"></div>
+          <button class="todo__checked"></button>
           <p class="todo__item-text">Done</p>
-          <div class="todo__delete"></div>
+          <button class="todo__delete"></button>
         </li>
 
         <li class="todo__item">
-          <div class="todo__checked"></div>
+          <button class="todo__checked"></button >
           <p class="todo__item-text">Done good</p>
-         <div class="todo__delete"></div>
+         <button  class="todo__delete"></button >
         </li>
 
         <li class="todo__item todo__item--checked">
-          <div class="todo__checked"></div>
+          <button  class="todo__checked"></button >
           <p class="todo__item-text">Done well</p>
-          <div class="todo__delete"></div>
+          <button  class="todo__delete"></button >
         </li>
       </ul>
     </main>
